crates/next-custom-transforms/tests/errors/react-server-components/server-graph/fake-client-entry/input.js
export default function () {
  return null
}

// prettier-ignore
'use client'
